# accountstatement-ocr

./: requirements.txt
BankStatementOCR/: app.py  pyproject.toml  requirements.txt  sample_transactions.txt  transaction_parser.py
